src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_12.snap
---
source: src/parser/test.rs
description: "fn(x) { @ }"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,3)->(0,4)),
                        name: "x",
                    },
                ),
            ],
        ),
        body: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,8)->(0,9)),
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 11,
            },
        },
    },
]

===================================

fn(x) { @ }
        ^ [Error] SyntaxError: Unexpected '@'.
